test/mips/error/compiler/test_mips_error_compiler_006.out


[E08] Error: Incorrect instruction syntax
    ╭─[ assembly:11:7 ]
    │
 11 │    li $t0, 0xhello
    │       ──────┬─────  
    │             ╰─────── Incorrect syntax
    │ 
    │ Note: Allowed formats:
    │       li $rd,val
────╯

The syntax `li $rd,val` failed with the following reason:
Error: found `identifier (xhello)` but expected `\n` or `end of input`
    ╭─[ assembly:11:13 ]
    │
 11 │    li $t0, 0xhello
    │             ───┬──  
    │                ╰──── Unexpected input
    │                │    
    │                ╰──── while parsing this expression
────╯

Not executed
keyboard[0x0]:''; display[0x0]:''; 

